<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pick_date"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_material_event"
        android:title="@string/action_pick_date"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_material_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_material_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_date_ascending"
                    android:title="@string/action_sort_date_ascending"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/action_sort_date_descending"
                    android:title="@string/action_sort_date_descending"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/action_sort_price_ascending"
                    android:title="@string/action_sort_price_ascending"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/action_sort_price_descending"
                    android:title="@string/action_sort_price_descending"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
</menu>