<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_loading"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dimensions"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/width_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/length_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/playground_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/playground_editor_dimensions_width_hint"
                android:inputType="number"
                android:minLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/length_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/height_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/width_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/playground_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/playground_editor_dimensions_length_hint"
                android:inputType="number"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/height_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/length_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/playground_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/playground_editor_dimensions_height_hint"
                android:inputType="number"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>